@@ -4,15 +4,17 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.storage.friendship.FriendshipStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
-import java.util.Collection;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class UserService {
     private final UserStorage userStorage;
+    private final FriendshipStorage friendshipStorage;
 
     public Collection<User> getAllUsers() {
         return userStorage.getAllUsers();
@@ -28,12 +30,7 @@ public class UserService {
     }
 
     public User updateUser(User user) {
-        if (userStorage.getUserById(user.getId()).isEmpty()) {
-            throw new NotFoundException("Пользователь не найден.");
-        }
-
         updateUserName(user);
-
         return userStorage.updateUser(user);
     }
 
@@ -41,8 +38,8 @@ public class UserService {
         User user = userStorage.getUserById(id).orElseThrow(() -> new NotFoundException("Пользователь не найден."));
         User friend = userStorage.getUserById(friendId)
                 .orElseThrow(() -> new NotFoundException("Пользователь для добавления в друзья не найден."));
-        user.getFriendsIds().add(friendId);
-        friend.getFriendsIds().add(id);
+
+        friendshipStorage.addFriendship(user.getId(), friend.getId());
 
         return user;
     }
@@ -50,20 +47,14 @@ public class UserService {
     public void deleteFromFriends(Long id, Long friendId) {
         User user = userStorage.getUserById(id).orElseThrow(() -> new NotFoundException("Пользователь не найден."));
         User friend = userStorage.getUserById(friendId)
-                .orElseThrow(() -> new NotFoundException("Пользователь для добавления в друзья не найден."));
-        user.getFriendsIds().remove(friendId);
-        friend.getFriendsIds().remove(id);
+                .orElseThrow(() -> new NotFoundException("Пользователь для удаления из друзей не найден."));
+
+        friendshipStorage.deleteFriendship(user.getId(), friend.getId());
     }
 
     public Collection<User> getFriends(Long id) {
         User user = userStorage.getUserById(id).orElseThrow(() -> new NotFoundException("Пользователь не найден."));
-
-        return user.getFriendsIds()
-                .stream()
-                .map(userStorage::getUserById)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+        return friendshipStorage.getFriendsByUserId(user.getId());
     }
 
     public Collection<User> getCommonFriends(Long id, Long otherId) {
@@ -72,13 +63,12 @@ public class UserService {
         User otherUser = userStorage.getUserById(otherId)
                 .orElseThrow(() -> new NotFoundException("Второй пользователь не найден."));
 
-        return user.getFriendsIds()
-                .stream()
-                .filter(friendId -> otherUser.getFriendsIds().contains(friendId))
-                .map(userStorage::getUserById)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+        Collection<User> firstFriends = friendshipStorage.getFriendsByUserId(user.getId());
+        Collection<User> secondFriends = friendshipStorage.getFriendsByUserId(otherUser.getId());
+
+        return firstFriends.stream()
+                .filter(secondFriends::contains)
+                .collect(Collectors.toList());
     }
 
     private void updateUserName(User user) {
